Upgrade level + related deps

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "intersect-arrays-to-stream": "^0.0.3",
     "js-logger": "^1.4.1",
-    "levelup": "^1.3.9",
+    "level": "^7.0.1",
     "lodash.difference": "^4.5.0",
     "lodash.intersection": "^4.4.0",
     "lodash.sortedindexof": "^4.1.0",
@@ -45,17 +45,13 @@
     "ngraminator": "0.0.1",
     "stopword": "^0.1.8"
   },
-  "optionalDependencies": {
-    "leveldown": "^1.6.0"
-  },
   "devDependencies": {
     "commitizen": "^2.9.6",
-    "conventional-github-releaser": "1.1.13",
-    "level-out": "0.0.7",
+    "conventional-github-releaser": "^3.1.5",
     "number-to-words": "^1.2.3",
-    "search-index-adder": "*",
+    "search-index-adder": "git+ssh://git@github.com:viktoriyaabakumova-okta/search-index-adder#master",
     "standard": "^9.0.1",
-    "standard-changelog": "^1.0.1",
+    "standard-changelog": "^2.0.27",
     "tape": "^4.6.3",
     "written-number": "^0.6.3"
   }
